<resources>
    <string name="app_name">Firebase tutorial</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_otp_here">Enter OTP Here</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="save">Save</string>
    <string name="welcome">WELCOME!!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_account_register_now">No Account? Register now</string>
    <string name="login_with_google_account">Login With Google Account</string>
    <string name="login_with_phone">Login With Phone</string>
    <string name="login">Login</string>
    <string name="_0">0</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_now">Already have an Account? Login now</string>
    <string name="register_with_google_account">Register With Google Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="get_data">Get Data</string>
    <string name="image_upload">image upload</string>
    <string name="upload">Upload</string>
    <string name="browse">Browse</string>
    <string name="retrieve_image">Retrieve Image</string>
    <string name="image_retrieve">Image Retrieve</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="splash_image">splash image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>