<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNumber"
        android:layout_width="@dimen/width_txt"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/phone_number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_code"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.hbb20.CountryCodePicker
        android:id="@+id/country_code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ccp_height"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/cpp_margin_start"
        app:ccp_autoDetectCountry="true"
        app:ccp_defaultNameCode="IND"
        app:ccp_showFlag="true"
        app:ccp_showNameCode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/get_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_code" />

    <EditText
        android:id="@+id/edtDigitOne"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:autofillHints="true"
        android:background="@color/purple"
        android:gravity="center"
        android:hint="@string/_0"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/edtDigitTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGetOtp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edtDigitTwo"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:background="@color/purple"
        android:gravity="center"
        android:hint="@string/_0"
        android:textColor="@color/white"
        android:inputType="number"
        android:autofillHints="true"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/edtDigitThree"
        app:layout_constraintStart_toEndOf="@id/edtDigitOne"
        app:layout_constraintTop_toBottomOf="@id/btnGetOtp" />

    <EditText
        android:id="@+id/edtDigitThree"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:background="@color/purple"
        android:gravity="center"
        android:inputType="number"
        android:autofillHints="true"
        android:hint="@string/_0"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/edtDigitFour"
        app:layout_constraintStart_toEndOf="@id/edtDigitTwo"
        app:layout_constraintTop_toBottomOf="@id/btnGetOtp" />

    <EditText
        android:id="@+id/edtDigitFour"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:background="@color/purple"
        android:gravity="center"
        android:hint="@string/_0"
        android:inputType="number"
        android:autofillHints="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/edtDigitFive"
        app:layout_constraintStart_toEndOf="@id/edtDigitThree"
        app:layout_constraintTop_toBottomOf="@id/btnGetOtp" />

    <EditText
        android:id="@+id/edtDigitFive"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:background="@color/purple"
        android:gravity="center"
        android:inputType="number"
        android:autofillHints="true"
        android:hint="@string/_0"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/edtDigitSix"
        app:layout_constraintStart_toEndOf="@id/edtDigitFour"
        app:layout_constraintTop_toBottomOf="@id/btnGetOtp" />

    <EditText
        android:id="@+id/edtDigitSix"
        android:layout_width="@dimen/width_height"
        android:layout_height="@dimen/width_height"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:background="@color/purple"
        android:gravity="center"
        android:hint="@string/_0"
        android:inputType="number"
        android:autofillHints="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edtDigitFive"
        app:layout_constraintTop_toBottomOf="@id/btnGetOtp" />

    <TextView
        android:id="@+id/txtResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_start_margin"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/resend_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtDigitOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/verify_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtResend" />


</androidx.constraintlayout.widget.ConstraintLayout>